src/assets/css/todo.css
.todo-container {
   color: black;
   display: flex;
   width: 100%;
   flex-direction: column;
   gap: 1rem;
   align-items: center;
   justify-content: center;
}

.todo-head-container {
   display: flex;
   width: 100%;;
   align-items: center;
   gap: 1rem;
}

.todo-title {
   margin-right: auto;
}

.todo-duedate {
   justify-self: end;
}

.edit-todo-btn {
   background-color: transparent;
   border: none;
}

.edit-todo-icon {
   width: 1.4rem;
}

.todo-container:not(:last-child) {
   border-bottom: 1px solid #8491a3;
}

.todo-description {
   display: none;
}

